--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ Marco Mellia<br>
 
 </center>
 
-<table width="200" border="1">
+<table width="200" border="0">
   <tr>
     <td>
     <div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://jianpeng-xu.github.io/', 'user' : 1159039, 'server' : '4', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-02-15', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www4.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www4.clustrmaps.com/user/06a11af7f"></a></noscript></td>
@@ -357,5 +357,6 @@ Marco Mellia<br>
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
 </table>
+<p> Last updated on Feb, 2015</p>
 </body>
 </html>
