--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@ Marco Mellia<br>
   		<li><a href="http://www.aboutdm.com/p/about.html" target="_blank">Dr. Junling Hu</a> - Director of Data Mining Group, Samsung Research America</li>
   	</ul>
   	
+	<b>Tutorials</b>
+	<ul>
+  		<li><a href="https://sites.google.com/site/hadoopsetuptutorial/" target="_blank">How to setup Hadoop</a> - by Jianpeng Xu</li>
+  	</ul>
+  	
   	</td><td valign="top">
     <b>Affiliations</b>
     <ul>
