--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0021)http://www.ofria.com/ Website deisgn by courtesy of Dr. Charles Ofria -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Homepage of Jianpeng Xu</title>
+  <title>Homepage of Jianpeng Xu@MSU</title>
   <link rel="stylesheet" href="./stylesheets/main.css">
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css">
   <script src="./javascripts/jquery-1.8.3.js"></script>
@@ -77,7 +77,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <table border="2" bgcolor="#F8F8FF" width="100%">
 <tbody><tr>
 <td>
-<h1 align="center">Jianpeng Xu</h1>
+<h1 align="center">Jianpeng Xu 徐建鹏</h1>
 </td>
 </tr>
 </tbody></table>
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology in 2010 and BS in Computer Science, Shandong University in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes network mining, change detection, frequent pattern mining, multi-task learning, online learning, spatio-temporal data mining, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its applications on Spatio-temporal data. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis for Samsung Smart TV.  
+      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University (MSU) from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes network mining, change detection, frequent pattern mining, multi-task learning, online learning, spatio-temporal data mining, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its applications on Spatio-temporal data. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis for Samsung Smart TV.  
       </small>
     </p>
         
@@ -128,15 +128,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+      <tr><td valign="top">3/11/2015</td> <td>Jianpeng will intern at Samsung Research America in Summer 2015.</td></tr>
+
+      <tr><td valign="top">3/11/2015</td> <td>Jianpeng will attend the Doctoral Forum on <b>SDM 2015</b>.</td></tr>
+
       <tr><td valign="top">2/10/2015</td> <td>Jianpeng will give an oral presentation for his paper "Formula: FactORized MUlti-task LeArning for task discovery in personalized medical models" on <b>SDM 2015</b>.</td></tr>
 
       <tr><td valign="top">12/25/2014</td> <td>Jianpeng's paper "Formula: FactORized MUlti-task LeArning for task discovery in personalized medical models" is accepted by <b>SDM 2015</b>.</td></tr>
 
-      <tr><td valign="top">12/14/2014</td> <td>Jianpeng will give an oral presentation for his paper "ORION: Online Regularized multI-task regressiON and its application to ensemble forecasting" on <b>ICDM 2014</b></td></tr>
+    <!--  <tr><td valign="top">12/14/2014</td> <td>Jianpeng will give an oral presentation for his paper "ORION: Online Regularized multI-task regressiON and its application to ensemble forecasting" on <b>ICDM 2014</b></td></tr>
 
       <tr><td valign="top">10/30/2014</td> <td>Jianpeng received Student Travel Award from <b>ICDM 2014</b></td></tr>
 
       <tr><td valign="top">10/14/2014</td> <td>Jianpeng's paper "ORION: Online Regularized multI-task regressiON and its application to ensemble forecasting" is accepted by <b>ICDM 2014</b></td></tr>
+	  -->
    	  </tbody>
       </table>
 	</small>
@@ -208,8 +213,8 @@ Marco Mellia<br>
 
     <p>
 	<ul> 
-<li>2015 PC Member, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
-<li>Reviewers for CIKM2014, DSAA2014, ICDM2014, SDM2015, WSDM2015</li>
+<li>Program Committee Member for BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
+<li>Reviewer for SDM2015, WSDM2015， CIKM2014, DSAA2014, ICDM2014</li>
 </ul>
     
     </p>
@@ -289,7 +294,7 @@ Marco Mellia<br>
 <table width="200" border="0">
   <tr>
     <td>
-    <div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://jianpeng-xu.github.io/', 'user' : 1159039, 'server' : '4', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-02-15', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www4.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www4.clustrmaps.com/user/06a11af7f"></a></noscript></td>
+    <div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://jianpeng-xu.github.io/', 'user' : 1159039, 'server' : '4', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-02-15', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www4.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www4.clustrmaps.com/user/06a11af7f" target="_blank"></a></noscript></td>
     <td><span style="display: block !important; width: 180px; text-align: center; font-family: sans-serif; font-size: 12px;"><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="East Lansing, Michigan Weather Forecast" target="_blank"><img src="http://weathersticker.wunderground.com/weathersticker/cgi-bin/banner/ban/wxBanner?bannertype=wu_bluestripes&airportcode=KLAN&ForcedCity=East Lansing&ForcedState=MI&zip=48823&language=EN" alt="Find more about Weather in East Lansing, MI" width="160" /></a><br>
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
