--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@ Marco Mellia<br>
     <p>
 	<ul> 
 <li>Program Committee Member for BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
-<li>Reviewer for SDM2015, WSDM2015， CIKM2014, DSAA2014, ICDM2014</li>
+<li>Reviewer for Conferences: SDM2015, WSDM2015, CIKM2014, DSAA2014, ICDM2014</li>
+<li>Reviewer for Journals: Neurocomputing </li>
 </ul>
     
     </p>
