--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <tr><td valign="top">2/10/2015</td> <td>Jianpeng will give an oral presentation for his paper "Formula: FactORized MUlti-task LeArning for task discovery in personalized medical models" on <b>SDM 2015</b>.</td></tr>
 
-      <tr><td valign="top">12/25/2014</td> <td>Jianpeng's paper "Formula: FactORized MUlti-task LeArning for task discovery in personalized medical models" is accepted by <b>SDM 2015</b>.</td></tr>
+      <tr><td valign="top">12/25/2014</td> <td>Jianpeng's paper "FORMULA: FactORized MUlti-task LeArning for task discovery in personalized medical models" is accepted by <b>SDM 2015</b>.</td></tr>
 
     <!--  <tr><td valign="top">12/14/2014</td> <td>Jianpeng will give an oral presentation for his paper "ORION: Online Regularized multI-task regressiON and its application to ensemble forecasting" on <b>ICDM 2014</b></td></tr>
 
@@ -156,7 +156,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h3>P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
-    <li><i>Formula: FactORized MUlti-task LeArning for task discovery in personalized medical models</i><br>
+    <li><i>FORMULA: FactORized MUlti-task LeArning for task discovery in personalized medical models</i><br>
  	   	Jianpeng Xu, Jiayu Zhou and Pang-Ning Tan <br>
         <b>SDM2015</b> (<a href="publications/2015-xu-SDM-Formula.pdf" target="_blank">Paper</a>)
     </li>
@@ -169,8 +169,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <b>ICDMW2014</b> on Scalable Data Analytics: Theory and Applications (<a href="publications/2014-xu-ICDMW-HDMiner.pdf" target="_blank">Paper</a>)
     </li>
     <li><i>Detecting Malicious Clients in ISP Networks Using HTTP Connectivity Graph and Flow Information</i><br>
-    	Lei Liu, Sabyasachi Saha, Ruben Torres, Jianpeng Xu, Pang-Ning Tan, Antonio Nucci,
-Marco Mellia<br>
+    	Lei Liu, Sabyasachi Saha, Ruben Torres, Jianpeng Xu, Pang-Ning Tan, Antonio Nucci, Marco Mellia<br>
 		<b>ASONAM2014</b> (<a href="publications/2014-liu-ASONAM-dmc.pdf" target="_blank">Paper</a>)
     </li> 
     </ol>
@@ -213,10 +212,10 @@ Marco Mellia<br>
 
     <p>
 	<ul> 
-<li>Program Committee Member for BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
-<li>Reviewer for Conferences: SDM2015, WSDM2015, CIKM2014, DSAA2014, ICDM2014</li>
-<li>Reviewer for Journals: Neurocomputing </li>
-</ul>
+	<li>Program Committee Member for BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
+	<li>Reviewer for Conferences: SDM2015, WSDM2015, CIKM2014, DSAA2014, ICDM2014</li>
+	<li>Reviewer for Journals: Neurocomputing </li>
+	</ul>
     
     </p>
 
@@ -229,7 +228,8 @@ Marco Mellia<br>
 
     <p>
 	<ul> 
-<li>Student Travel Award: <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
+	
+<li>Student Travel Award: <b>SDM</b>2015, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
 <li>Honorable Mention Award in Mathematical Contest in Modeling (<b>MCM</b>), 2006</li>
 
 
@@ -295,8 +295,11 @@ Marco Mellia<br>
 <table width="200" border="0">
   <tr>
     <td>
-    <div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://jianpeng-xu.github.io/', 'user' : 1159039, 'server' : '4', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-02-15', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www4.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www4.clustrmaps.com/user/06a11af7f" target="_blank"></a></noscript></td>
-    <td><span style="display: block !important; width: 180px; text-align: center; font-family: sans-serif; font-size: 12px;"><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="East Lansing, Michigan Weather Forecast" target="_blank"><img src="http://weathersticker.wunderground.com/weathersticker/cgi-bin/banner/ban/wxBanner?bannertype=wu_bluestripes&airportcode=KLAN&ForcedCity=East Lansing&ForcedState=MI&zip=48823&language=EN" alt="Find more about Weather in East Lansing, MI" width="160" /></a><br>
+	<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://jianpeng-xu.github.io/', 'user' : 1163081, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-03-25', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/ad911bf49" target="_blank"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/jianpeng-xu.github.io--thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+	
+	</td>
+	
+	<td><span style="display: block !important; width: 180px; text-align: center; font-family: sans-serif; font-size: 12px;"><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="East Lansing, Michigan Weather Forecast" target="_blank"><img src="http://weathersticker.wunderground.com/weathersticker/cgi-bin/banner/ban/wxBanner?bannertype=wu_bluestripes&airportcode=KLAN&ForcedCity=East Lansing&ForcedState=MI&zip=48823&language=EN" alt="Find more about Weather in East Lansing, MI" width="160" /></a><br>
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
 </table>
