--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0021)http://www.ofria.com/ Website deisgn by courtesy of Dr. Charles Ofria -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Homepage of Jianpeng Xu@MSU</title>
+  <title>Homepage of Jianpeng Xu@MSU -- Go Spartan!</title>
   <link rel="stylesheet" href="./stylesheets/main.css">
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css">
   <script src="./javascripts/jquery-1.8.3.js"></script>
@@ -220,8 +220,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
-	<li>Program Committee Member for BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
-	<li>Invited Reviewer for Conferences: AAAI2016, SDM2016, SDM2015, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li>
+	<li>Program Committee Member for MLRec2016, BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
+	<li>Invited Reviewer for Conferences: IJCAI2016, AAAI2016, SDM2016, SDM2015, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li>
 	<li>Reviewer for Journals: Neurocomputing, BMC Bioinformatics, TNNLS</li>
 	</ul>
     
@@ -237,7 +237,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
 	<ul> 
 	
-<li>Student Travel Award: <b>SDM</b>2015, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
+<li>Student Travel Award: <b>SDM</b>2016, <b>SDM</b>2015, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
 <li>Honorable Mention Award in Mathematical Contest in Modeling (<b>MCM</b>), 2006</li>
 
 
@@ -259,7 +259,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   	
   	<b>Collaborators</b>
   	<ul>
-  		<li><a href="http://drought.geo.msu.edu/group/" target="_blank">Dr. Lifeng Luo</a> - Assistant Professor, Geography, MSU</li>
+  		<li><a href="http://drought.geo.msu.edu/group/" target="_blank">Dr. Lifeng Luo</a> - Associate Professor, Geography, MSU</li>
   		<li><a href="http://0xmachine.com/" target="_blank">Dr. Jiayu Zhou</a> - Assistant Professor, Computer Science and Engineering, MSU</li>
   		<li><a href="http://www.aboutdm.com/p/about.html" target="_blank">Dr. Junling Hu</a> - Founder and CEO of Question.ai</li>
   	</ul>
@@ -311,6 +311,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
 </table>
-<p> Last updated on Jan. 2016</p>
+<p> Last updated on Feb. 2016</p>
 </body>
 </html>
