update publications and awards

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University (MSU) from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes network mining, change detection, frequent pattern mining, multi-task learning, online learning, spatio-temporal data mining, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV.  
+      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University (MSU) from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <b>Best Poster Award</b> from Doctoral Forum on SDM 2016. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV.  
       </small>
     </p>
         
@@ -128,6 +128,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+      <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <b>Best Poster Award</b> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
+	  
       <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
 
     <!--  <tr><td valign="top">3/11/2015</td> <td>Jianpeng will attend the Doctoral Forum on <b>SDM 2015</b>.</td></tr>
@@ -156,13 +158,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h3>P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
+    <li><i>Multi-Task Feature Interaction Learning</i><br>
+ 	   	Kaixiang Lin, Jianpeng Xu, Shuiwang Ji, Jiayu Zhou <br>
+        <b>KDD2016</b> (<a href="" target="_blank">To appear</a>)
+    </li>
+
+    <li><i>Online Multi-task Learning Framework for Ensemble Forecasting</i><br>
+ 	   	Jianpeng Xu, Pang-Ning Tan, Jiayu Zhou and Lifeng Luo <br>
+        <b>submitted to TKDE</b> (<a href="" target="_blank">Under review</a>)
+    </li>
+
     <li><i>Synergies that Matter: Efficient Interaction Selection via Sparse Factorization Machine</i><br>
  	   	Jianpeng Xu, Kaixiang Lin, Pang-Ning Tan and Jiayu Zhou <br>
-        <b>SDM2016</b> (<a href="" target="_blank">To appear</a>)
+        <b>SDM2016</b> (<a href="publications/2016-xu-SDM-SFM.pdf" target="_blank">Paper</a>)
     </li>
     <li><i>GSpartan: a Geospatio-Temporal Multi-task Learning Framework for Multi-location Prediction</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Lifeng Luo and Jiayu Zhou <br>
-        <b>SDM2016</b> (<a href="" target="_blank">To appear</a>)
+        <b>SDM2016</b> (<a href="publications/2016-xu-SDM-GSpartan.pdf" target="_blank">Paper</a>)
     </li>
     <li><i>FORMULA: FactORized MUlti-task LeArning for task discovery in personalized medical models</i><br>
  	   	Jianpeng Xu, Jiayu Zhou and Pang-Ning Tan <br>
@@ -236,7 +248,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
-	
+<li><b>Best Poster Award</b>: Doctoral Forum, <b> SDM</b>2016 </li>	
 <li>Student Travel Award: <b>SDM</b>2016, <b>SDM</b>2015, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
 <li>Honorable Mention Award in Mathematical Contest in Modeling (<b>MCM</b>), 2006</li>
 
@@ -311,6 +323,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
 </table>
-<p> Last updated on Feb. 2016</p>
+<p> Last updated on May 2016</p>
 </body>
 </html>
