--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+      <tr><td valign="top">10/12/2016</td> <td>Jianpeng has one paper accepted in <b>IEEE BigData 2016</b>.</td></tr>
       <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <b>Best Poster Award</b> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
 	  
       <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
@@ -162,14 +163,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
         <b>IEEE BigData2016</b> (<a href="" target="_blank">To appear</a>)
     </li>
-    <li><i>Multi-Task Feature Interaction Learning</i><br>
- 	   	Kaixiang Lin, Jianpeng Xu, Shuiwang Ji, Jiayu Zhou <br>
-        <b>KDD2016</b> (<a href="" target="_blank">To appear</a>)
-    </li>
 
     <li><i>Online Multi-task Learning Framework for Ensemble Forecasting</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Jiayu Zhou and Lifeng Luo <br>
         <b>submitted to TKDE</b> (<a href="" target="_blank">Under review</a>)
+    </li>
+    <li><i>Multi-Task Feature Interaction Learning</i><br>
+ 	   	Kaixiang Lin, Jianpeng Xu, Shuiwang Ji, Jiayu Zhou <br>
+        <b>KDD2016</b> (<a href="publications/2016-lin-KDD-MTFIL.pdf" target="_blank">Paper</a>)
     </li>
 
     <li><i>Synergies that Matter: Efficient Interaction Selection via Sparse Factorization Machine</i><br>
