--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University (MSU) from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <b>Best Poster Award</b> from Doctoral Forum on SDM 2016. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV.  
+      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University (MSU) from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV. Jianpeng is currently working at eBay as a Data Scientist. 
       </small>
     </p>
         
@@ -128,8 +128,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+      <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
       <tr><td valign="top">10/12/2016</td> <td>Jianpeng has one paper accepted in <b>IEEE BigData 2016</b>.</td></tr>
-      <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <b>Best Poster Award</b> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
+      <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <font color="FF0000"> Best Poster Award </font> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
 	  
       <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
 
@@ -156,18 +157,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div id="tabs-pubs" aria-labelledby="ui-id-2" class="ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel" aria-expanded="false" aria-hidden="true" style="display: none;">
     <br>
 
-    <h3>P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
+    <h3>S<small>ELECTED</small> P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
-    <li><i>WISDOM: Weighted Incremental Spatio-Temporal Multi-Task Learning via Tensor Decomposition</i><br>
- 	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
-        <b>IEEE BigData2016</b> (<a href="" target="_blank">To appear</a>)
-    </li>
-
     <li><i>Online Multi-task Learning Framework for Ensemble Forecasting</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Jiayu Zhou and Lifeng Luo <br>
         <b>submitted to TKDE</b> (<a href="" target="_blank">Under review</a>)
     </li>
+
+    <li><i>WISDOM: Weighted Incremental Spatio-Temporal Multi-Task Learning via Tensor Decomposition</i><br>
+ 	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
+        <b>IEEE BigData2016</b> <font color="FF0000"> Best Paper Award </font>(<a href="publications/2016-xu-IEEEBigData-WISDOM" target="_blank">Paper</a>)
+    </li>
+
     <li><i>Multi-Task Feature Interaction Learning</i><br>
  	   	Kaixiang Lin, Jianpeng Xu, Shuiwang Ji, Jiayu Zhou <br>
         <b>KDD2016</b> (<a href="publications/2016-lin-KDD-MTFIL.pdf" target="_blank">Paper</a>)
@@ -253,6 +255,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
+	<li><b>Best Paper Award</b>: <b>IEEE BigData</b> 2016
 <li><b>Best Poster Award</b>: Doctoral Forum, <b> SDM</b>2016 </li>	
 <li>Student Travel Award: <b>SDM</b>2016, <b>SDM</b>2015, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
 <li>Honorable Mention Award in Mathematical Contest in Modeling (<b>MCM</b>), 2006</li>
