bug fix - add pdf

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <li><i>WISDOM: Weighted Incremental Spatio-Temporal Multi-Task Learning via Tensor Decomposition</i><br>
  	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
-        <b>IEEE BigData2016</b> <font color="FF0000"> Best Paper Award </font>(<a href="publications/2016-xu-IEEEBigData-WISDOM" target="_blank">Paper</a>)
+        <b>IEEE BigData2016</b> <font color="FF0000"> Best Paper Award </font>(<a href="publications/2016-xu-IEEEBigData-WISDOM.pdf" target="_blank">Paper</a>)
     </li>
 
     <li><i>Multi-Task Feature Interaction Learning</i><br>
