--- a/index.html
+++ b/index.html
@@ -128,13 +128,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+      <tr><td valign="top">01/29/2017</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
       <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
       <tr><td valign="top">10/12/2016</td> <td>Jianpeng has one paper accepted in <b>IEEE BigData 2016</b>.</td></tr>
       <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <font color="FF0000"> Best Poster Award </font> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
 	  
-      <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
+    <!--  <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
 
-    <!--  <tr><td valign="top">3/11/2015</td> <td>Jianpeng will attend the Doctoral Forum on <b>SDM 2015</b>.</td></tr>
+    <tr><td valign="top">3/11/2015</td> <td>Jianpeng will attend the Doctoral Forum on <b>SDM 2015</b>.</td></tr>
 
       <tr><td valign="top">2/10/2015</td> <td>Jianpeng will give an oral presentation for his paper "Formula: FactORized MUlti-task LeArning for task discovery in personalized medical models" on <b>SDM 2015</b>.</td></tr>
 
@@ -162,7 +163,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <ol> 
     <li><i>Online Multi-task Learning Framework for Ensemble Forecasting</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Jiayu Zhou and Lifeng Luo <br>
-        <b>submitted to TKDE</b> (<a href="" target="_blank">Under review</a>)
+        <b>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2017</b> (<a href="publications/2017-xu-TKDE-ORION.pdf" target="_blank">Paper</a>)
     </li>
 
     <li><i>WISDOM: Weighted Incremental Spatio-Temporal Multi-Task Learning via Tensor Decomposition</i><br>
@@ -239,9 +240,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
-	<li>Program Committee Member for MLRec2016, BIBM2015, IJCAI2015, MLRec2015(in conjunction with SDM2015)</li>
-	<li>Invited Reviewer for Conferences: IJCAI2016, AAAI2016, SDM2016, SDM2015, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li>
-	<li>Reviewer for Journals: Neurocomputing, BMC Bioinformatics, TNNLS</li>
+	<li>Program Committee Member for BIBM 2015, 2016, IJCAI 2015, MLRec 2015, 2016, 2017(in conjunction with SDM)</li>
+	<li>Invited Reviewer for Conferences: IJCAI 2016, AAAI 2016, SDM 2015, 2016, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li>
+	<li>Reviewer for Journals: Neurocomputing, BMC Bioinformatics, TNNLS, Pattern Recognition, EURASIP</li>
 	</ul>
     
     </p>
@@ -257,7 +258,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<ul> 
 	<li><b>Best Paper Award</b>: <b>IEEE BigData</b> 2016
 <li><b>Best Poster Award</b>: Doctoral Forum, <b> SDM</b>2016 </li>	
-<li>Student Travel Award: <b>SDM</b>2016, <b>SDM</b>2015, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
+<li>Student Travel Award: <b>IEEE BigData</b> 2016, <b>SDM</b> 2015, 2016, <b>ICDM</b> 2014, <b>MSU Graduate School</b> 2014</li>
 <li>Honorable Mention Award in Mathematical Contest in Modeling (<b>MCM</b>), 2006</li>
 
 
