add github link for each paper

--- a/index.html
+++ b/index.html
@@ -163,34 +163,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <ol> 
     <li><i>Online Multi-task Learning Framework for Ensemble Forecasting</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Jiayu Zhou and Lifeng Luo <br>
-        <b>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2017</b> (<a href="publications/2017-xu-TKDE-ORION.pdf" target="_blank">Paper</a>)
+        <b>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2017</b> (<a href="publications/2017-xu-TKDE-ORION.pdf" target="_blank">Paper</a>) [<a href="https://github.com/Jianpeng-Xu/TKDE-ORION" target="_blank">Github</a>]
     </li>
 
     <li><i>WISDOM: Weighted Incremental Spatio-Temporal Multi-Task Learning via Tensor Decomposition</i><br>
  	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
-        <b>IEEE BigData2016</b> <font color="FF0000"> Best Paper Award </font>(<a href="publications/2016-xu-IEEEBigData-WISDOM.pdf" target="_blank">Paper</a>)
+        <b>IEEE BigData2016</b> <font color="FF0000"> Best Paper Award </font>(<a href="publications/2016-xu-IEEEBigData-WISDOM.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/IEEEbigdata2016-wisdom" target="_blank">Github</a>]
     </li>
 
     <li><i>Multi-Task Feature Interaction Learning</i><br>
  	   	Kaixiang Lin, Jianpeng Xu, Shuiwang Ji, Jiayu Zhou <br>
-        <b>KDD2016</b> (<a href="publications/2016-lin-KDD-MTFIL.pdf" target="_blank">Paper</a>)
+        <b>KDD2016</b> (<a href="publications/2016-lin-KDD-MTFIL.pdf" target="_blank">Paper</a>)[<a href="https://github.com/KaixiangLin/MTIL-example" target="_blank">Github</a>]
     </li>
 
     <li><i>Synergies that Matter: Efficient Interaction Selection via Sparse Factorization Machine</i><br>
  	   	Jianpeng Xu, Kaixiang Lin, Pang-Ning Tan and Jiayu Zhou <br>
-        <b>SDM2016</b> (<a href="publications/2016-xu-SDM-SFM.pdf" target="_blank">Paper</a>)
+        <b>SDM2016</b> (<a href="publications/2016-xu-SDM-SFM.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/SDM2016-SFM" target="_blank">Github</a>]
     </li>
     <li><i>GSpartan: a Geospatio-Temporal Multi-task Learning Framework for Multi-location Prediction</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Lifeng Luo and Jiayu Zhou <br>
-        <b>SDM2016</b> (<a href="publications/2016-xu-SDM-GSpartan.pdf" target="_blank">Paper</a>)
+        <b>SDM2016</b> (<a href="publications/2016-xu-SDM-GSpartan.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/SDM2016-GSpartan" target="_blank">Github</a>]
     </li>
     <li><i>FORMULA: FactORized MUlti-task LeArning for task discovery in personalized medical models</i><br>
  	   	Jianpeng Xu, Jiayu Zhou and Pang-Ning Tan <br>
-        <b>SDM2015</b> (<a href="publications/2015-xu-SDM-Formula.pdf" target="_blank">Paper</a>)
+        <b>SDM2015</b> (<a href="publications/2015-xu-SDM-Formula.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/SDM2015-Formula" target="_blank">Github</a>]
     </li>
     <li><i>ORION: Online Regularized multI-task regressiON and its application to ensemble forecasting</i><br>
 	    Jianpeng Xu, Pang-Ning Tan and Lifeng Luo <br>
-    	<b>ICDM2014</b> (<a href="publications/2014-xu-ICDM-ORION.pdf" target="_blank">Paper</a>)
+    	<b>ICDM2014</b> (<a href="publications/2014-xu-ICDM-ORION.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/TKDE-ORION" target="_blank">Github</a>]
     </li>
     <li><i>HDminer: Efficient Mining of High Dimensional Frequent Closed Patterns from Dense Data and Its Application</i> <br>
     	Jianpeng Xu and Shufan Ji    <br>
