update phd information in main site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0021)http://www.ofria.com/ Website deisgn by courtesy of Dr. Charles Ofria -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Homepage of Jianpeng Xu@MSU -- Go Spartan!</title>
+  <title>Homepage of Jianpeng Xu</title>
   <link rel="stylesheet" href="./stylesheets/main.css">
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css">
   <script src="./javascripts/jquery-1.8.3.js"></script>
@@ -99,10 +99,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <img src="images/h_large_XD6q_781f00014e712f76.jpg" width="200" align="left" hspace="10" vspace="10">
 
     <p>
-      <big><b>Jianpeng Xu</b></big><br>
-      Ph.D Student of
-      <a href="http://www.cse.msu.edu/" target="_blank">Computer Science and Engineering</a>, <a href="http://www.msu.edu/" target="_blank">Michigan State University</a><br>
-      Email: xujianpe@msu.edu <br>
+      <big><b>Dr. Jianpeng Xu</b></big><br>
+      Data Scientist @ eBay <br>
+      Personal Email: jianpeng.xu@gmail.com <br>
       LinkedIn: <a href="http://www.linkedin.com/pub/jianpeng-xu/27/4b4/a39" target="_blank">
       
           <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15.png" width="80" height="15" border="0" alt="View Jianpeng Xu's profile on LinkedIn">
@@ -113,7 +112,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-      Jianpeng Xu started his Ph.D study in CSE Department, Michigan State University (MSU) from 2011 Fall, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV. Jianpeng is currently working at eBay as a Data Scientist. 
+      Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV. Jianpeng is currently working at eBay as a Data Scientist. 
       </small>
     </p>
         
